--- a/components/header.css
+++ b/components/header.css
@@ -4,39 +4,55 @@ body{
     width:100%;
 }
 header{
-    border:solid red;
     display:grid;
     grid-template-rows: 80px 20px;
     grid-template-columns: 100px 1fr;
 }
 
 nav{
-    border:solid blue;
     grid-row-start: 1;
     grid-row-end: 2;
     grid-column-start:1;
     grid-column-end:3;
     display: grid;
     grid-template-columns: 100px 1fr;
+    background-color:black;
 }
 .website-logo{
     height: 100%;
-    border: solid yellow;
     grid-row-start: 1;
     grid-row-end: 3;
     grid-column-start: 1;
     grid-column-end:2;
 }
 .nav-tabs{
-    border:solid  black;
     margin:0;
     grid-column-start:2;
     grid-column-end:3;
+    margin-top:auto;
+    margin-bottom:auto;
 }
 .nav-tabs li{
     display: inline;
+    vertical-align: middle;
+    margin:0;
 }
 .nav-tabs li a{
     text-decoration: none;
-    border:solid red;
+    color:white;
+    margin:0px 15px 0px 15px;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:1.5rem;
+    transition:all 0.10s ease;
+}
+.nav-tabs li a:hover{
+    color:goldenrod;
+    font-size:1.7rem;
+}
+.color-filler{
+    background-color:red;
+    grid-row-start: 2;
+    grid-row-end:3;
+    grid-column-start:1;
+    grid-column-end:3;
 }
