--- a/components/header.html
+++ b/components/header.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <link type="text/css" rel="stylesheet" href="component.css" />
+    <link type="text/css" rel="stylesheet" href="header.css" />
 </head>
 
 <body>
@@ -14,9 +14,10 @@
                 <li><a href="#">Inventory</a></li>
                 <li><a href="#">Sell Vehicle</a></li>
                 <li><a href="#">Finace</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="#">About</a></li>
             </ul>
         </nav>
+        <div class="color-filler"></div>
         <img class="website-logo" src="img/logo/website-logo.png" />
     </header>
 </body>
