Done with Home Page

--- a/components/header.html
+++ b/components/header.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
         <div class="color-filler"></div>
-        <img class="website-logo" src="img/logo/website-logo.png" />
+        <img class="website-logo" src="../img/logo/website-logo.png" />
     </header>
 </body>
 
