--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;
     font-family: Arial, Helvetica, sans-serif;
+    color:white;
 }
 body{
     margin:0;
@@ -83,16 +84,136 @@ nav{
     background-color:black;
     color:white;
     border-radius:20px;
+    display:grid;
+    grid-template-rows:1fr 2fr 1fr;
+    grid-template-columns:1fr 1fr 1fr 1fr 1fr;
 }
 form{
+    grid-row-start:2;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 6;
+}
+h2{
+    grid-row-start:2;
+    grid-row-end: 3;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    margin:0px 0px 0px 10px;;
+}
+figcaption{
+    font-size:1.5rem;
+    width:100%;
+}
+form *{
+    padding:10px;
+    
+}
+form input, select{
+    margin-right:20px;
+    border-radius:20px;
+    width:200px;
+    border:solid red;
+}
+#submit{
+    width:100px;
+    background-color:red;
+    color:white;
+    font-size:1rem;
+}
+#submit:hover{
+    border:solid white;
+}
+.recent-arrivals-wrapper{
+    margin-top:10px;
+    width:98%;
+    height:fit-content;
+    margin-right:auto;
+    margin-left:auto;
+    background-color:black;
+    border-radius:20px;
+}
+.recent-arrivals-wrapper h1{
+    padding:20px;
+}
+.new-inventory{
+    width:80%;
+    margin:auto;
+}
+.each-cell{
+    width:100%;
     display:grid;
-    grid-template-rows:1fr 5fr 1fr;
-    grid-template-columns:0.1fr 1fr 0.1fr 1fr 0.1fr 1fr 1fr; 
-    grid-template-areas:
-        "no no no no no no no"
-        "ya ya ya ya ya ya ya"
-        "no no no no no no no";
+    grid-template-columns: 1fr 1fr 1fr;
+    align-content: center;
+    grid-gap: 50px;
+    margin-bottom:50px;
+}
+.car-cards{
+    height:fit-content;
+    width:100%;
+    border:solid white;
+    border-radius:20px;
+    transition:all 0.1s ease;
+}
+.car-cards:hover{
+    transform:scale(1.05);
+}
+.car-cards img{
+    width:100%;
+    border:none;
+    border-radius:20px;
+}
+.details-div{
+    width:100%;
+    height:50px;
+    font-size: 2rem;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows:50px;
+    text-align: center;
+}
+.buy-now-button{
+    background-color:red;
+    width:80%;
+    height:50px;
+    border:none;
+    border-radius:20px;
+    font-size: 1rem;
+}
+.buy-now-button:hover{
+    border:solid white;
 }
 
-
 /*Main-Container CSS Ends here*/
+
+/*Footer CSS starts here*/
+footer{
+    width:100%;
+    background:black;
+    height:150px;
+    margin-top: 20px;
+    display:grid;
+    grid-template-rows:1fr;
+    grid-template-columns:1fr 1fr 1fr;
+}
+.follow-us-imgs{
+    width:100px;
+    height:100px;
+    margin-right:20px;
+}
+.copyright-content{
+    height: 90%;
+    position: relative;
+}
+.copyright-content *{
+    width: 100%;
+    font-weight: bold;
+    bottom:0;
+    text-align: center;
+    position: absolute;
+}
+#subscribe-button{
+    background-color:red;
+    width:100px;
+}
+
