Done with Inventory Page

--- a/css/inventory.css
+++ b/css/inventory.css
@@ -1,5 +1,4 @@
 .body-container{
-    width:98%;
     margin:auto;
     border:solid black;
     display:grid;
@@ -8,7 +7,7 @@
 }
 .advanced-search-container{
     background-color:black;
-    border-radius:20px;
+    border-radius:0px;
     height:fit-content;
 }
 label{
@@ -30,14 +29,21 @@ select,input,option{
     background-color:black;
     overflow:hidden;
 }
-/*
-.image-container{
-    width:2100px;
-    height:500px;
-    position:relative;
-    transition:left 2s;
-    -webkit-transition:left 2s;
-    -moz-transition:left 2s;
-    -o-transfition:left 2s;
+#car-variety{
+    margin:auto;
+    width: 100%;
 }
-*/
+.recently-viewed{
+    background-color:black;
+    width: 98%;
+    height: 500px;
+    margin-left:auto;
+    margin-right: auto;
+    margin-top:30px;
+    
+}
+.recent-rows{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap:30px;
+}
