--- a/css/index.css
+++ b/css/index.css
@@ -5,8 +5,6 @@
     color:white;
 }
 body{
-    margin:0;
-    padding:0;
     background-color:red;
 }
 video{
@@ -193,7 +191,7 @@ footer{
     height:150px;
     margin-top: 20px;
     display:grid;
-    grid-template-rows:1fr;
+    grid-template-rows:150px;
     grid-template-columns:1fr 1fr 1fr;
 }
 .follow-us-imgs{
