Done with inventory.css and BEGIN OF BOOTSTRAP DESIGN

--- a/css/inventory.css
+++ b/css/inventory.css
@@ -8,7 +8,7 @@
 .advanced-search-container{
     background-color:black;
     border-radius:0px;
-    height:fit-content;
+    height:100%;
 }
 label{
     font-size:1.5rem;
