Done with individual headers and footers. Starting with js now

--- a/css/inventory.css
+++ b/css/inventory.css
@@ -1,49 +1,4 @@
-.body-container{
-    margin:auto;
+hr{
     border:solid black;
-    display:grid;
-    grid-template-columns: 400px 1fr;
-    grid-template-rows:1fr;
-}
-.advanced-search-container{
-    background-color:black;
-    border-radius:0px;
-    height:100%;
-}
-label{
-    font-size:1.5rem;
-}
-form{
-    display:grid;
-    grid-template-columns:1fr 1fr;
-    grid-template-rows:1fr 1fr 1fr 1fr 1fr;
-}
-select,input,option{
-    width: 90%;
     color:black;
-    margin-bottom: 30px;
-    
-}
-
-.ads-div{
-    background-color:black;
-    overflow:hidden;
-}
-#car-variety{
-    margin:auto;
-    width: 100%;
-}
-.recently-viewed{
-    background-color:black;
-    width: 98%;
-    height: 500px;
-    margin-left:auto;
-    margin-right: auto;
-    margin-top:30px;
-    
-}
-.recent-rows{
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap:30px;
 }
